@@ -14,6 +14,7 @@
 	fixed thread messages on Windows (do not use system queue)
 	thread_current returns unique value
 	remove kind_import, kind_export, added kind_share
+	added os library
 	TODO : FIX OO for JIT AS WELL
 	TODO : process output capture
 
